fix css alignment

--- a/assets/css/onyx-poll.css
+++ b/assets/css/onyx-poll.css
@@ -291,20 +291,31 @@
 .onyx-poll-widget {
 	box-shadow: none;
 	width: 100%;
-	max-width: var(--pollWidgetWidth);
-}
-
-.onyx-poll-widget.left {
-	float: left;
-	margin: 0 1em 1em 0;
-}
-
-.onyx-poll-widget.right {
-	float: right;
-	margin: 0 0 1em 1em;
-}
-
-.onyx-poll-widget.full {
 	max-width: 100%;
 	margin: 1em 0 1em 0;
+}
+
+@media screen and (min-width: 767px) {
+
+	.onyx-poll-widget {
+		box-shadow: none;
+		width: 100%;
+		max-width: var(--pollWidgetWidth);
+	}
+
+	.onyx-poll-widget.left {
+		float: left;
+		margin: 0 1em 1em 0;
+	}
+
+	.onyx-poll-widget.right {
+		float: right;
+		margin: 0 0 1em 1em;
+	}
+
+	.onyx-poll-widget.full {
+		max-width: 100%;
+		margin: 1em 0 1em 0;
+	}
+
 }
